# amunet

./: .dockerignore  .env.example  .firebaserc  .gitignore  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  capacitor.config.ts  docker-compose.yml  firebase.json  index.html  netlify.toml  package-lock.json  package.json  tsconfig.node.json  vercel.json  vite.config.ts  wrangler.toml
.github/workflows/: build-installers.yml  deploy-cloudflare.yml  deploy-github-pages.yml  deploy-supabase.yml
cloudflare/: worker.js
deploy/: Caddyfile
docs/: DEPLOY.md  FIREBASE_HOSTING.md  FREE_DEPLOY_OPTIONS.md  FREE_SCALE.md  NO_PC_DEPLOY.md  RELEASE.md  SUPABASE.md
public/: _headers  manifest.webmanifest
server/: index.mjs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: cloudStore.ts  supabase.ts
supabase/: .env.example  config.toml
supabase/functions/amunet-api/: index.ts
supabase/migrations/: 202604250001_initial_schema.sql  202604250002_api_grants.sql
tools/: inspect-eggnet.mjs  inspect-local.mjs
tools/release/: build-bridge-sidecar.mjs  prepare-android.mjs  prepare-proxypass.mjs  sync-version.mjs
