[package]
name = "luma-arcade-desktop"
version = "0.1.2"
description = "Luma Arcade desktop shell"
authors = ["Luma Arcade"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
